--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -68,6 +68,8 @@
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "5:00 - 6:30 Munmun de Choudhury Guest Lecture"
+    
 
 - date: 2021-06-19
   name: Day off
