--- a/_data/2021/bologna/speakers.yml
+++ b/_data/2021/bologna/speakers.yml
@@ -16,6 +16,7 @@
   website:
   
 - name: Cesar Hidalgo
+  image: /assets/images/CesarHidalgo01.JPG
   bio: "Cesar A. Hidalgo directs the Center for Collective Learning at the Artificial and Natural Intelligence Institute (ANITI) at the University of Toulouse. Prior to joining ANITI, he directed the Collective Learning group at MIT. Hidalgo holds a PhD in Physics from the University of Notre Dame, and is the author of dozens of peer reviewed papers and three books. His latest book is How Humans Judge Machines (MIT Press, 2021)."
   website:
 
