--- a/_data/2021/oxford/participants.yml
+++ b/_data/2021/oxford/participants.yml
@@ -1,15 +1,15 @@
 - name: Mary Abed Al Ahad
-  image: /assets/images/oxford_2021_Mary_Abed_Al_Ahad.jpeg
+  image: /assets/images/oxford_2021_Mary_Abed_Al_Ahad.jpg
   bio: "Mary Abed Al Ahad is a PhD student in Geography at the University of St Andrews, UK and she is also an affiliated PhD student in the IMPRS-PHDs program at Max Planck institute. Her research interests include air pollution, weather variations, health, mortality, morbidity, and ethnic inequalities in health."
   website: https://scholar.google.com/citations?user=SN7lRrkAAAAJ&hl=en
 
 - name: Reham Al Tamime
-  image: /assets/images/oxford_2021_Reham_Al_Tamime.jpeg
+  image: /assets/images/oxford_2021_Reham_Al_Tamime.png
   bio: "Reham Al Tamime is a PostDoc Researcher at Qatar Computing Research Institute."
   website: https://twitter.com/Reham_PhD
 
 - name: William Allen
-  image: /assets/images/oxford_2021_William_Allen.jpeg
+  image: /assets/images/oxford_2021_William_Allen.jpg
   bio: "William Allen is a teaching fellow in Politics at St. John’s College, University of Oxford, and a postdoctoral researcher at Oxford’s Centre on Migration, Policy, and Society (COMPAS). He examines the causes and consequences of citizen engagement with economic and political information on migration-related issues in Europe and Latin America. He holds a DPhil in Politics from Oxford, is an Associate Editor for the journal Evidence and Policy, and advocates for developing social science impact as a Public Engagement with Research Fellow at Oxford."
   website: https://twitter.com/williamlallen
 
@@ -19,7 +19,7 @@
   website:
 
 - name: Elis Carlberg Larsson
-  image: /assets/images/oxford_2021_Elis_Carlberg_Larsson.jpeg
+  image: /assets/images/oxford_2021_Elis_Carlberg_Larsson.jpg
   bio: "Elis is a doctoral student at the Institute for Analytical Sociology, Linköping University. He has a MSc in Computational Social Science (Linköping University) and a BA in Sociology (Stockholm University). He investigates the formation, changes, and consequences of attitudes in three projects: 1) investigating xenophobic attitudes, 2) secularization, and 3) sexuality utilizing computational approaches like machine learning, agent-based modeling, and computational text analysis."
   website: https://twitter.com/eliscl406
 
@@ -29,17 +29,17 @@
   website: https://twitter.com/cuihaosabrina
 
 - name: Tom	Edbrooke
-  image: /assets/images/oxford_2021_Tom_Edbrooke.jpeg
+  image: /assets/images/oxford_2021_Tom_Edbrooke.jpg
   bio: "Tom is currently studying for his MSc in Digital Sociology at the University of Edinburgh. He hopes to map how vaccine narratives and actors interact on Twitter, to support better engagement strategies from medical authorities. His research interests are computational social science and social network analytics."
   website: https://www.linkedin.com/in/thomas-e-0003435a/
 
 - name: Ellen	Frank Delgado
-  image: /assets/images/oxford_2021_Ellen_Frank_Delgado.jpeg
+  image: /assets/images/oxford_2021_Ellen_Frank_Delgado.jfif
   bio: "Ellen Frank Delgado is a doctoral student in Sociology at University of Edinburgh. Ellens research focuses on measuring inclusion in organisational settings as it pertains to historically underrepresented groups, such as racial minorities and women. Her research primarily relies on computational social science methodologies, including computational text analysis and organisational network analysis."
   website: www.ellenfd.com
 
 - name: Mobarak	Hossain
-  image: /assets/images/oxford_2021_Mobarak_Hossain.jpeg
+  image: /assets/images/oxford_2021_Mobarak_Hossain.jpg
   bio: "Mobarak is a doctoral candidate in Social Policy at Nuffield College, University of Oxford. His work examines how different macro institutional mechanisms reinforce or offset educational and labour market inequalities by social origins focusing on developing countries. He is also interested in gender inequality, youth and well-being."
   website: https://www.nuffield.ox.ac.uk/people/profiles/mobarak-hossain
 
@@ -54,7 +54,7 @@
   website: https://scholar.google.co.uk/citations?user=pAqtaywAAAAJ&hl=en
 
 - name: Yuru Li
-  image: /assets/images/oxford_2021_Yuru_Li.jpeg
+  image: /assets/images/oxford_2021_Yuru_Li.jpg
   bio: "Yuru Li is a first-year PhD candidate in the lab of “Digital Communication and Diversity of Information” at the University of Bremen. She has broad interests in computational communication, political communication, digital media and social media, false news research, image recognition communication, refugee study, discourse power, the third level of agenda setting, etc. The current research she is doing focuses on the network agenda setting on the European refugee crisis, in which mixed innovative methods, such as topic modelling, social network analysis, Quadratic Assignment Procedure (QAP), Granger Causality Test based on time series, will be adopted."
   website:
 
@@ -69,37 +69,37 @@
   website: https://www.hayleypring.com/
 
 - name: Marti Rovira
-  image: /assets/images/oxford_2021_Marti_Rovira.jpeg
+  image: /assets/images/oxford_2021_Marti_Rovira.jpg
   bio: "Marti Rovira is a British Academy Postdoctoral Research Fellow at the University of Oxford’s Sociology Department and a Non-stipendiary Postdoctoral Research Fellow at Nuffield College. His research examines questions about the intersections between social inequalities and the criminal justice system."
   website: https://martirovira.com/
 
 - name: Nicole Schwitter
-  image: /assets/images/oxford_2021_Nicole_Schwitter.jpeg
+  image: /assets/images/oxford_2021_Nicole_Schwitter.jpg
   bio: "Nicole is a PhD student based at the University of Warwick. In her thesis, she investigates the effects offline gatherings between Wikipedians have on their online behaviour. She holds an MA in Sociology from the University of Leipzig and a BA from the University of Bern."
   website: https://twitter.com/nschwitter
 
 - name: Michael	Skvrnak
-  image: /assets/images/oxford_2021_Michael_Skvrnak.jpeg
+  image: /assets/images/oxford_2021_Michael_Skvrnak.jpg
   bio: "Michael is a PhD student at Charles University and works at the Institute of Sociology, Czech Academy of Sciences. His research focuses on the behaviour of political elites, elections and politics in East-Central Europe. Before his PhD, he studied political science at Masaryk University and worked at Czech Radio."
   website: https://twitter.com/skvrnami
 
 - name: Tasos Spiliotopoulos
-  image: /assets/images/oxford_2021_Tasos_Spiliotopoulos.jpeg
+  image: /assets/images/oxford_2021_Tasos_Spiliotopoulos.jpg
   bio: "Tasos Spiliotopoulos is a Human-Computer Interaction researcher with a focus on social technologies and human-centered design. Tasos is a postdoctoral research associate at the Newcastle University Business School in the UK, where he currently researches trust in the financial industry."
   website: https://tasos-spiliotopoulos.com
 
 - name: Katharina Tittel
-  image: /assets/images/oxford_2021_Katharina_Tittel.jpeg
+  image: /assets/images/oxford_2021_Katharina_Tittel.jpg
   bio: "Katharina Tittel is a doctoral student in sociology at Sciences Po Paris, where she also obtained her MA in Economic Policy. Her work applies quantitative and computational methods to questions of media framing and migration coverage. Furthermore, Katharina conducts research on class-based digital inequalities, and misinformation beliefs. Before joining Sciences Po, she worked for a German-Israeli tech start-up."
   website:
 
 - name: Deivyd Velasquez
-  image: /assets/images/oxford_2021_Deivyd_Velasquez.jpeg
+  image: /assets/images/oxford_2021_Deivyd_Velasquez.jpg
   bio: "Deivyd is a Ph.D. candidate in Economics at the University of Bordeaux. His research focuses on the operationalization of innovation strategies in a territory, in particular on the Nouvelle-Aquitaine region. He is particularly interested in the gap between the ideal recommendations proposed by researchers and the actual expectations of policymakers. His methodology combines in-depth, qualitative fieldwork with multivariate spatial analyses. Deivyd holds an MRes in Economics of Innovation and Strategic Intelligence from the University of Bordeaux, and a BA in Economics and International Relations from the University of Rosario (Colombia)."
   website: https://twitter.com/Dima_Alexandre
 
 - name: Jiani Yan
-  image: /assets/images/oxford_2021_Jiani_Yan.jpeg
+  image: /assets/images/oxford_2021_Jiani_Yan.jpg
   bio: "Jiani is currently an MPhil student in Sociology and Demography at the University of Oxford. Her research interest lies in improving the computational methods for forecasting mortality and morbidity. She is particularly interested in machine learning algorithms."
   website:
 
@@ -114,11 +114,11 @@
   website:
 
 - name: Jingwen Zhang
-  image: /assets/images/oxford_2021_Jingwen_Zhang.jpeg
+  image: /assets/images/oxford_2021_Jingwen_Zhang.jpg
   bio: "Jingwen Zhang is a PhD student in Social Statistics at the University of Manchester. Having a background in demography and social medicine, she is mainly interested in social determinants of health, ageing, domestic violence, and life course theory with a focus on quantitative methods. Her PhD project is on the longitudinal dynamics of rural-urban health disparity in later life in China."
   website: https://twitter.com/lily_zjw
 
 - name: Maksim Zubok
-  image: /assets/images/oxford_2021_Maksim_Zubok.jpeg
+  image: /assets/images/oxford_2021_Maksim_Zubok.jpg
   bio: "I am reading the MPhil in Politics (European Politics and Society) at Oxford University in my first year. For my main research project, I use computational text analysis to assess what citizens of the European Union think of European integration in different areas of core state powers."
   website: https://twitter.com/antndlcxr
