fixed extension on leng

--- a/_data/2021/oxford/participants.yml
+++ b/_data/2021/oxford/participants.yml
@@ -49,7 +49,7 @@
   website: https://twitter.com/timokoch_
 
 - name: Rhodri_Leng
-  image: /assets/images/oxford_2021_Rhodri_Leng.jpeg
+  image: /assets/images/oxford_2021_Rhodri_Leng.jpg
   bio: "Rhodri I. Leng is ESRC Fellow in the Sociology of Science at the University of Edinburgh. His research focuses on how findings spread through the scientific literature and shape understanding. An important element of his work involves developing methods to detect citation bias and distortions in the literature."
   website: https://scholar.google.co.uk/citations?user=pAqtaywAAAAJ&hl=en
 
