--- a/_data/2021/oxford/schedule.yml
+++ b/_data/2021/oxford/schedule.yml
@@ -46,7 +46,7 @@
     - name: "10:00 - 13:00 Lecture: Introduction to ML and Computer Vision"
     - name: "13:00 - 14:00 Lunch"
     - name: "14:00 - 16:00 Exercise: ML and Computer Vision"
-    - name: "16:00 - 18:00 Research Talk: TBC" 
+    - name: "16:00 - 18:00 Research Talk: Saul Newman" 
 
 - date: 2021-06-19
   name: Geospatial data and analysis 
@@ -70,12 +70,13 @@
 - date: 2021-06-23
   name: Group Projects Work
   events:
-    - name: "16:00 - 18:00 Research Talk: TBC"
+    - name: "10:00 - 12:00 Oxford-London Joint Research Talk: Peaks Krafft"
 
 
 - date: 2021-06-24
   name: Group Projects Work
   events:
+    - name: "13:00 - 14:00 Oxford-London Joint Research Talk: Viktoria Spaiser"
     - name: "16:00 - 18:00 Research Talk: Robin Lovelace"
 
 - date: 2021-06-25
