--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -4,23 +4,23 @@
 - date: 2021-06-21
   name: Introduction to Digital Trace Data
   events:
-    - name: "10:00 - 10:20 Introduction to SICSS, Computational Social Science, and the California Center For Population Research by Dr. Jennie Brand (*Zoom*)"
-    - name: "10:20 - 10:40 Introductions (What is Computational Social Science) (*In two rounds Zoom break-out rooms*) "
+    - name: "10:00 - 10:20 Introduction to SICSS, Computational Social Science, and the California Center For Population Research by Dr. Jennie Brand (*In Zoom full group*)"
+    - name: "10:20 - 10:40 Introductions (What is Computational Social Science) (*In rounds of Zoom break-out rooms*) "
     - name: "10:45 - 11:45 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 1:15 Lecture: Collecting Digital Data (e.g., via Webscraping, APIs, Mturk) (*In Zoom full group*)"
     - name: "1:15 - 2:30 Project Speed Dating (*In Zoom breakout rooms*)"
-    - name: "2:30 - 4:00 Guest Speaker: TBD (In Zoom full group)"
-    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours (getting started with Slack, R, Q & A)"
+    - name: "2:30 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
+    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom (getting started with Slack, R, Q & A)"
 
 - date: 2021-06-22
   name: Digitial Trace Data Workday
   events:
-    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
-    - name: "10:15 - 11:45 [Data Collection Exercise](https://compsocialscience.github.io/summer-institute/2020/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (In Zoom break-out rooms)"
+    - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
+    - name: "10:15 - 11:45 Data Collection Exercise (*In Zoom full group*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 1:15 Review Data Collection Exercise"
-    - name: "1:15 - 2:45 Guest Speaker Panel: Computational Social Science in Industry TBD (In Zoom full group)"
+    - name: "1:15 - 2:45 Guest Speaker Panel: Computational Social Science in Industry TBD (*In Zoom full group*)"
     - name: "3:00 - 3:45 Project Time"
     - name: "3:45 - 4:00 Debrief"
   
@@ -33,12 +33,12 @@
     - name: "11:30 - 1:15 Break"
     - name: "1:30 - 3:00 Group Discussion + Exercise"
     - name: "3:00 - 4:00 Guest Speaker: TBD (In Zoom full group)"
-    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
+    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2022-06-24
   name: Project Day
   events:
-    - name: "10:00 - 10:30 CSS Skills Workshop: TBD (*Zoom full group*)"
+    - name: "10:00 - 10:30 CSS Skills Workshop: TBD (*In Zoom full group*)"
     - name: "10:30 - 11:45 Project Time (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 1:45 Guest Speaker: TBD (*In Zoom full group*)"
@@ -48,28 +48,28 @@
 - date: 2021-06-25
   name: Introduction to Causal Inference (DAGS + Observational Data)
   events:
-    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
     - name: "10:15 - 11:00 Lecture: DAGs + Observational Data (*In Zoom full group*)"
     - name: "11:00 - 11:45 Small Group Discussions (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 2:00 Group Discussion + Exercise"
-    - name: "2:00 - 4:00  CSS Skills Workshop"
+    - name: "12:45 - 2:00 Group Discussion + Exercise (*In Zoom break-out room*)"
+    - name: "2:00 - 4:00  CSS Skills Workshop *In Zoom full group*"
 
 - date: 2021-06-28
   name: Introduction to Text Analysis + Unsupervised Learning
   events:
-    - name: "10:00 - 10:15 Outline the Day (*Zoom*)"
+    - name: "10:00 - 10:15 Outline the Day (*In Zoom full group*)"
     - name: "10:15 - 11:00 Lecture: Text Analysis (*In Zoom full group*)"
     - name: "11:00 - 11:45 Small Group Discussions + Exercise (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 3:00 Project Time"
-    - name: "3:00 - 4:00 Guest Speaker: TBD (In Zoom full group)"
-    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
+    - name: "12:45 - 3:00 Project Time" (*In Zoom break-out room*)
+    - name: "3:00 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
+    - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
 - date: 2021-06-29
   name: Text Analysis Activity
   events:
-    - name: "10:00 - 10:30 CSS Skills Workshop (*Zoom*)"
+    - name: "10:00 - 10:30 CSS Skills Workshop (*In Zoom full group*)"
     - name: "10:30 - 11:45 Text Analysis Activity (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 2:45 Project Time (*In Zoom break-out rooms*)"
@@ -84,7 +84,7 @@
     - name: "11:15 - 11:45 Discussion (*In Zoom full group*)"
     - name: "11:45 - 12:45 Break"
     - name: "12:45 - 3:00 Group Exercise (*In Zoom break-out rooms*)"
-    - name: "3:00 - 4:00 Guest Speaker: TBD (In Zoom full group)"
+    - name: "3:00 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours"
     
           
