--- a/_data/2021/oxford/schedule.yml
+++ b/_data/2021/oxford/schedule.yml
@@ -60,7 +60,7 @@
     - name: "10:00 - 13:00 Brainstorming/sorting for group formation in the morning"
     - name: "13:00 - 14:00 Lunch"
     - name: "14:00 - 16:00 Groups work on projects"
-    - name: "16:00 - 18:00 Research Talk: TBC" 
+    - name: "16:00 - 18:00 Research Talk: Alexandra A. Siegel" 
 
 - date: 2021-06-22
   name: Group Projects Work
