--- a/_data/2021/los_angeles/schedule.yml
+++ b/_data/2021/los_angeles/schedule.yml
@@ -62,7 +62,7 @@
     - name: "10:15 - 11:00 Lecture: Text Analysis (*In Zoom full group*)"
     - name: "11:00 - 11:45 Small Group Discussions + Exercise (*In Zoom break-out room*)"
     - name: "11:45 - 12:45 Break"
-    - name: "12:45 - 3:00 Project Time" (*In Zoom break-out room*)"
+    - name: "12:45 - 3:00 Project Time (*In Zoom break-out room*)"
     - name: "3:00 - 4:00 Guest Speaker: TBD (*In Zoom full group*)"
     - name: "4:00 - 4:30 OPTIONAL: Open Office Hours on Zoom"
       
