Fix schedule for montreal

--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -1,4 +1,4 @@
-- name: Semaine 1 / Week 1 : Formation intensive à R
+- name: "Semaine 1 / Week 1 : Formation intensive à R"
 - date: 2021-06-07
   events:
     - name: "Schedule coming soon..."
