--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -1,4 +1,9 @@
-- name: "Semaine 1 / Week 1 : Formation intensive à R"
+- name: Semaine 1 / Week 1 : Formation intensive à R
 - date: 2021-06-07
+  name: Introduction à R, RStudio et RMarkdown
   events:
-    - name: "Schedule coming soon..."
+    - name: "9:00 - 9:30 : Arrivée"
+    - name: "9:30 - 12:30 Formation (Zoom)
+    - name: "12:30 - 1:30 Pause
+    - name: "1:30 - 3:30 Labo (Zoom)
+    
