--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -3,7 +3,7 @@
   name: Introduction à R, RStudio et RMarkdown
   events:
     - name: "9:00 - 9:30 : Arrivée"
-    - name: "9:30 - 12:30 Formation (Zoom)
-    - name: "12:30 - 1:30 Pause
-    - name: "1:30 - 3:30 Labo (Zoom)
+    - name: "9:30 - 12:30 Formation (Zoom)"
+    - name: "12:30 - 1:30 Pause"
+    - name: "1:30 - 3:30 Labo (Zoom)"
     
