--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -6,4 +6,31 @@
     - name: "9:30 - 12:30 Formation (Zoom)"
     - name: "12:30 - 1:30 Pause"
     - name: "1:30 - 3:30 Labo (Zoom)"
-    
+- date: 2021-06-08
+  name: Transformation des données
+  events:
+    - name: "9:00 - 9:30 : Debriefing"
+    - name: "9:30 - 12:30 Formation (Zoom)"
+    - name: "12:30 - 1:30 Pause"
+    - name: "1:30 - 3:30 Labo (Zoom)"    
+- date: 2021-06-09
+  name: Visualisation
+  events:
+    - name: "9:00 - 9:30 : Debriefing"
+    - name: "9:30 - 12:30 Formation (Zoom)"
+    - name: "12:30 - 1:30 Pause"
+    - name: "1:30 - 3:30 Labo (Zoom)"
+- date: 2021-06-10
+  name: Modélisation
+  events:
+    - name: "9:00 - 9:30 : Debriefing"
+    - name: "9:30 - 12:30 Formation (Zoom)"
+    - name: "12:30 - 1:30 Pause"
+    - name: "1:30 - 3:30 Labo (Zoom)"  
+- date: 2021-06-11
+  name: Introduction aux données de texte
+  events:
+    - name: "9:00 - 9:30 : Debriefing"
+    - name: "9:30 - 12:30 Formation (Zoom)"
+    - name: "12:30 - 1:30 Pause"
+    - name: "1:30 - 3:30 Labo (Zoom)"      
