--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -1,3 +1,5 @@
+name: Semaine 1: Formation intensive à R
+- date: 2021-06-07
 - date: 2021-06-07
   name: Introduction à R, RStudio et RMarkdown
   events:
