--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -1,5 +1,5 @@
 name: Ce calendrier est encore préliminaire
-name: Semaine 1: Formation intensive à R
+name: Semaine 1 Formation intensive à R
 - date: 2021-06-07
   name: Introduction à R, RStudio et RMarkdown
   events:
