--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -1,1 +1,160 @@
+- name: Amy Benner
+  image: /assets/images/Amy_Benner.jpeg
+  bio: "Amy Benner is a PhD candidate in the Department of Political Science at Rutgers University and a research assistant at the Center for American Women and Politics. Her research interests include women’s political participation, barriers to representation, campaign finance, and political psychology. She primarily examines the fundraising process as a structural barrier for women candidates."
+  website: https://twitter.com/amynbenner
+
+- name: Cory Cascalheira
+  image: /assets/images/Cory_Cascalheira.jpeg
+  bio: "Cory J. Cascalheira is a doctoral student at New Mexico State University, the research project coordinator in the Minority Stress and Trauma Lab at Syracuse University, and the NICE Chair for Psi Chi. He applies computational social science to the study of minority stress and substance misuse among LGBTQIA+ populations."
+  website: https://twitter.com/CJCascalheira
+  
+- name: Jeffrey Coltman-Cormier
+  image: /assets/images/Jeffrey_ColtmanCormier.jpeg
+  bio: "Jeffrey is a PhD student in Political Science at Rutgers University and a National Science Foundation Graduate Research Fellow who earned his B.A. at Florida Atlantic University. The primary focus of his research agenda concerns the political attitudes and behavior of border residents regarding border security measures."
+  website: https://twitter.com/JeffreyColtCorm
+
+- name: Haoshu Duan
+  image: /assets/images/Haoshu_Duan.png
+  bio: "Haoshu Duan is a doctoral student in sociology at University of Maryland and is also affiliated with Maryland Population Research Center (MPRC). Her research is primarily focused on patterns and health consequences of family caregiving over the life course; beyond this, she also experiments with Machine Learning technique and applies it into health research. She holds a B.A. from Zhejiang University, and a MPP from Michigan State University. She also interned at Insight Policy Research company and conducted program evaluations for WIC."
+  website: https://twitter.com/Haoshu2014
+
+- name: Mehri E. Baloochi
+  image: /assets/images/Mehri_Baloochi.jpeg
+  bio: "Mehri is pursuing a PhD in Organizational Behaviour at the University of Manitoba. She holds a Master’s degree in MBA from University of Tehran, and she has worked as an HR practitioner in several leading companies in Iran. Her research interests are focused on the new world of work, gig workers, resilience, and virtual identity. Her current research focuses on discrimination in online gig-work platforms."
+  website: 
+  
+- name: Kelsey Edmond
+  image: /assets/images/Kelsey_Edmond.jpeg
+  bio: "Kelsey Edmond is a PhD candidate in Public Policy at the McCormack Graduate School of Policy and Global Studies at the University of Massachusetts Boston. She employs mixed methods to study digital equity policymaking, coproduction theory, and initiatives that bridge the digital divide. She holds a Bachelor’s degree in Organization and Community Leadership and a Master’s in Public Administration both from the University of Delaware, as well as a Master’s in Public Policy from the University of Massachusetts Boston."
+  website: https://twitter.com/pshhkels
+  
+- name: Ilona Fridman
+  image: /assets/images/Ilona_Fridman.jpeg
+  bio: "Ilona Fridman is a postdoctoral researcher at Duke University. Her research leverages data science to explore patient-reported outcomes in social media, inform future health communications, and prepare patients, physicians, and policymakers for decisions that lead to high-quality patient care."
+  website: https://scholar.google.com/citations?user=zeiw2z4AAAAJ&hl=en
+
+- name: Amy Funck
+  image: /assets/images/Amy_Funck.jpeg
+  bio: "Amy is a PhD candidate in Political Science at Rutgers University studying the effects of emotions and socio-cognitive development on decision making. Current research includes a meta-analysis of emotions and information search, and experiments on personality and decision style, political knowledge and Gen Z, and prompting cognition in surveys."
+  website: https://twitter.com/funck_amy
+  
+- name: Bijean Ghafouri
+  image: /assets/images/Bijean_Ghafouri.jpeg
+  bio: "Bijean is a graduate student in political science at the University of Southern California. He holds a B.Sc in political science from the University of Montreal. His work lies at the intersection of political behavior, political communication, electoral campaigns and social media."
+  website: https://twitter.com/bijean_
+
+- name: Stacey Greene
+  image: /assets/images/Stacey_Greene.jpeg
+  bio: "Stacey Greene is an assistant professor of political science at Rutgers University. She studies intergroup politics among and between racial/ethnic minorities in the United States."
+  website: 
+
+- name: V. Tibet Gur
+  image: /assets/images/VTibet_Gur
+  bio: "Tibet Gur is a doctoral student at Rutgers Political Science department. He holds a BA and MA degree from International Relations department of Bilkent University, Turkey. His research interests include international political economy, energy regionalism, and maritime border conflict. His prior work has been published on Turkish Studies."
+  website: https://twitter.com/tibetgur
+  
+- name: Jessica Hamilton
+  image: /assets/images/Jessica_Hamilton.jpeg
+  bio: "Jessica Hamilton is an Assistant Professor of Clinical Psychology at Rutgers University. Her research examines modifiable risk and protective factors for adolescent suicidal thoughts and behaviors, particularly focused on social media and sleep. Methodologically, she uses smartphone sensing and ecological momentary assessment (EMA) to examine these factors in real time."
+  website: https://twitter.com/jhamiphd
+
+- name: Brielle Harbin
+  image: /assets/images/Brielle_Harbin.jpeg
+  bio: "Brielle Harbin is an Assistant Professor of Political Science at the United States Naval Academy. Her research examines how the American public forms opinions related to social problems in the United States (e.g. drug use and addiction and racial discrimination) as a result of their social identities, media representations, and personal experience with these issues. She investigates how these understandings emerge in the general public as well as how these same dynamics manifest and affect teaching and learning in the university classroom."
+  website: https://twitter.com/BrielleHarbin
+
+- name: Xian Huang
+  image: /assets/images/Xian_Huang.jpeg
+  bio: "I am an Assistant Professor in the Department of Political Science at Rutgers University. Before joining Rutgers, I was a postdoctoral fellow in the Center for the Study of Contemporary China at University of Pennsylvania. I received a PhD of Political Science from Columbia University. I just published a book, Social Protection under Authoritarianism: Health Politics and Policy in China."
+  website: https://xian-huang.com/
+  
+- name: Hyerim Jo
+  image: /assets/images/Hyerim_Jo.jpeg
+  bio: "Hyerim Jo is a Ph.D. candidate in the Department of Communication at the University at Albany. Using quantitative research methods including text mining, her research focuses on the production and consumption of mediated messages in various contexts such as health, science, and environment, as well as their impacts on audiences."
+  website: 
+
+- name: Stephanie Kang
+  image:
+  bio: "Stephanie is a postdoctoral fellow in the Department of Political Science at the University of California, Davis. She uses formal theory and quantitative data analysis to study defense cooperation between countries. Her research has been funded by the Fulbright Program, the Korea Foundation, and the Department of Education."
+  website: https://stephanie-kang.com/
+
+- name: Isaac Kimmel
+  image: /assets/images/Isaac_Kimmel.jpeg
+  bio: "Isaac Kimmel is a doctoral candidate in sociology at the University of Notre Dame who studies the shaping effect of cultural frames on identity formation and social change; his research often overlaps with the fields of political science, communications, philosophy, history, and theology. Isaac's dissertation uses data from US political candidates on Twitter to investigate how preexisting partisan values and loyalties formed the official response to the emerging and evolving COVID-19 pandemic. He is interested in topic modeling and other forms of automated text analysis, especially insofar as they can be integrated into a mixed-methods approach. Isaac holds an MA in sociology from Notre Dame and a BA in philosophy from the Catholic University of America."
+  website: https://twitter.com/IsaacKimmel
+  
+- name: India Lenear
+  image: /assets/images/India_Lenear
+  bio: "India S. Lenear is currently a doctoral student at Rutgers University at New Brunswick. Her work broadly studies Women and politics, American politics, and American Political Theory. More specifically, she focuses on Black politics, identity politics, and Black feminism(s). Her research examines Black women’s political behavior, engagement, and participation through Black feminist theoretical lenses. She holds a BA in Political Science from North Carolina Central University."
+  website: 
+  
+- name: YiJyun Lin
+  image: /assets/images/YiJyun_Lin.jpeg
+  bio: "YiJyun Lin recently defended her doctoral dissertation entitled “Identifying Spatiotemporal Effects of Climate Variability on Civil Conflicts.” Her long-term research agenda concerns the use of machine learning and spatial methods to collect and analyze text and image data on the effects of climate change on local environmental degradation, resource scarcity, anti-immigration attitudes, and the emerging contentious politics."
+  website: 
+  
+- name: Shuning Lu
+  image: /assets/images/Shuning_Lu.jpeg
+  bio: "Shuning Lu (Ph.D., University of Texas at Austin) is an assistant professor in the Department of Communication, North Dakota State University. Her research interests revolve around news use, media effects, and political communication. Her recent projects explore social media news engagement, online incivility, and civic engagement with online experiments and large-scale surveys."
+  website: https://twitter.com/shuning_lu
+
+- name: David Martin
+  image: /assets/images/David_Martin.png
+  bio: "David is a political science PhD student at Rutgers University where he studies American Politics, Comparative Politics, and Research Methodology. His interests are in political economy and American Political Development. His current project is on currency politics and the role of ideas in the New Deal."
+  website: https://twitter.com/davidrpmartin
+
+- name: Mario Mercado-Diaz
+  image: /assets/images/Mario_MercadoDiaz.jpeg
+  bio: "Mario Mercado Diaz is a Ph.D. Candidate in the Sociology program at Rutgers University-New Brunswick. His dissertation studies the effects Spanish Caribbean migrants have on the receiving communities of Houston, TX. More broadly, he is interested in land use and housing, aging and health equity, and migrant deportation."
+  website: https://twitter.com/mmercadodiaz
+  
+- name: Zhaomeng Niu
+  image: /assets/images/Zhaomeng_Niu.png
+  bio: "Zhaomeng Niu is a postdoctoral fellow in Behavioral Sciences at Rutgers Cancer Insititute of New Jersey. She received her PhD from Washington State University. Her research interests include social media interventions, human-computer interaction, and health communication."
+  website: 
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website: 
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website: 
+
+- name: 
+  image: /assets/images/
+  bio: ""
+  website: 
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website: 
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website:
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website: 
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website: 
+  
+- name: 
+  image: /assets/images/
+  bio: ""
+  website:  
+
+
+
+
+
 - name: More to be added soon!
