--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -1,4 +1,4 @@
-# name: Ce calendrier est sujette à changement
+# name: Ce calendrier est sujet à changement
 # name: Semaine 1 Formation intensive à R
 - date: 2021-06-07
   name: Introduction à R, RStudio et RMarkdown
