--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -97,35 +97,35 @@
   name: Congé
 # name: "Semaine 3: SICSS - Projets d'équipes"
 - date: 2021-06-21
-  name: Formation équipe
+  name: Formation des équipes
   events:
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 12:30 Formation des équipes"
     - name: "12:30 - 1:30 Pause"
     - name: "1:30 - 3:30 Projet en équipe (Zoom)"
 - date: 2021-06-22
-  name: Formation équipe
+  name: Projet en équipe
   events:
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 12:30 Projet en équipe (Zoom)"
     - name: "12:30 - 1:30 Pause"
     - name: "1:30 - 3:30 Projet en équipe (Zoom)"
 - date: 2021-06-23
-  name: Formation équipe
+  name: Projet en équipe
   events:
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 12:30 Projet en équipe (Zoom)"
     - name: "12:30 - 1:30 Pause"
     - name: "1:30 - 3:30 Projet en équipe (Zoom)"
 - date: 2021-06-24
-  name: Formation équipe
+  name: Projet en équipe
   events:
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 12:30 Projet en équipe (Zoom)"
     - name: "12:30 - 1:30 Pause"
     - name: "1:30 - 3:30 Projet en équipe (Zoom)"
 - date: 2021-06-25
-  name: Formation équipe
+  name: Présentation des projets
   events:
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 12:30 Présentation des projets d'équipe (Zoom)"
